--- a/Product_CURD_API/Product_CURD_API.csproj
+++ b/Product_CURD_API/Product_CURD_API.csproj
@@ -14,6 +14,7 @@
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.8.1" />
+	  <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
 </Project>
